force-app/main/default/objects/Battleground_Team__c/Battleground_Team__c.object-meta.xml
<CustomObject>
    <description>Gamification battleground team (BRD 20.1). Users mapped via Team Member; games assigned to one or more teams.</description>
    <label>Battleground Team</label>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Battleground Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>