force-app/main/default/objects/Battleground_Team__c/fields/Team_Code__c.field-meta.xml
<CustomField>
    <fullName>Team_Code__c</fullName>
    <externalId>true</externalId>
    <label>Team Code</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>